<resources>
    <string name="app_name">CERC-MaterialDesign</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="description">Description</string>
    <string name="dimension">Dimension</string>
    <string name="req">Skills Requirement</string>
    <string name="req_text">requirement</string>
    <string name="favorite">FAVOURITE</string>
    <string name="share">SHARE</string>
    <string name="jobs">Jobs</string>
    <string name="discover">DISCOVER THE JOBS</string>
    <string name="from" />
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="tv_greet_user">Halo, User!</string>
    <string name="explore_more_and_shortlist_some_furniture">Explore more and shortlist some furniture</string>
    <string name="start_shopping">START SHOPPING</string>
    <string name="tv_category">Categories</string>
    <string name="tv_discover">Discover</string>
    <string name="item_price">$ 12,862</string>
    <string name="wishlist_title">My Favorite Job</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty!</string>
    <string name="item_nama">Programmer</string>
    <string name="item_desc">when the wait is worth</string>


</resources>